[package]
name = "git-lfs-locker"
version = "0.1.0"
authors = ["evopen <520dhh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.23.0"
wgpu = "0.6.0"
image = "0.23.11"
egui = "0.3.0"
env_logger = "0.8.1"
log = "0.4.11"
futures = "0.3.8"
nfd2 = "0.2.3"
walkdir = "2"
rayon = "1.5.0"
anyhow = "1.0.34"
serde_json = "1.0"
fuzzy-matcher = "0.3"
tempfile = "3.1.0"
notify = "4.0"
self_update = "0.20.0"
egui_wgpu_backend = "0.2.1"
egui_winit_platform = "0.2.0"


[profile.dev]
incremental = false

[profile.release]
lto = true
