[package]
authors = ["evopen <520dhh@gmail.com>"]
edition = "2018"
name = "git-lfs-locker"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.34"
egui = "0.3.0"
egui_wgpu_backend = "0.2.1"
egui_winit_platform = "0.2.0"
env_logger = "0.8.1"
futures = "0.3.8"
fuzzy-matcher = "0.3"
image = "0.23.11"
log = "0.4.11"
nfd2 = "0.2.3"
notify = "4.0"
parking_lot = "0.11.0"
rayon = "1.5.0"
self_update = "0.20.0"
serde_json = "1.0"
tempfile = "3.1.0"
walkdir = "2"
wgpu = "0.6.0"
winit = "0.23.0"

[patch.crates-io]
egui_wgpu_backend = {path = "../egui_wgpu_backend"}

[profile.dev]
incremental = true

[profile.release]
lto = false
